--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>i want become a developer beacouse, i want to make someting new for the new genratation</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
